--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@capacitor/android": "^8.0.2",
+    "@capacitor/cli": "^8.0.2",
+    "@capacitor/core": "^8.0.2",
+    "@capacitor/screen-orientation": "^8.0.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
